--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -12,6 +12,11 @@
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
+    "typeorm": "ts-node ./node_modules/typeorm/cli",
+    "migration:run": "pnpm typeorm migration:run -d ./src/config/typeorm.ts",
+    "migration:generate": "pnpm typeorm -d ./src/config/typeorm.ts migration:generate src/migrations/$name",
+    "migration:create": "pnpm typeorm migration:create ./src/migrations/$name",
+    "migration:revert": "pnpm typeorm -- -d ./src/config/typeorm.ts migration:revert",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -24,9 +29,12 @@
     "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/typeorm": "^10.0.2",
     "dotenv": "^16.4.5",
+    "pg": "^8.13.0",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "typeorm": "^0.3.20"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
