--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -13,10 +13,10 @@
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "typeorm": "ts-node ./node_modules/typeorm/cli",
-    "migration:run": "pnpm typeorm migration:run -d ./src/config/typeorm.ts",
-    "migration:generate": "pnpm typeorm -d ./src/config/typeorm.ts migration:generate src/migrations/$name",
-    "migration:create": "pnpm typeorm migration:create ./src/migrations/$name",
-    "migration:revert": "pnpm typeorm -- -d ./src/config/typeorm.ts migration:revert",
+    "migration:run": "npx typeorm-ts-node-commonjs migration:run -d ./src/config/typeorm.ts",
+    "migration:generate": "npx typeorm-ts-node-commonjs -d ./src/config/typeorm.ts migration:generate src/migrations/$name",
+    "migration:create": "npx typeorm-ts-node-commonjs migration:create ./src/migrations/$name",
+    "migration:revert": "npx typeorm-ts-node-commonjs -d ./src/config/typeorm.ts migration:revert",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -28,8 +28,11 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.2",
+    "@types/bcrypt": "^5.0.2",
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "pg": "^8.13.0",
     "reflect-metadata": "^0.2.0",
