--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -12,11 +12,16 @@
   "dependencies": {
     "@ant-design/icons": "^5.5.1",
     "@tanstack/react-query": "^5.59.13",
+    "@tiptap/extension-mention": "^2.8.0",
+    "@tiptap/react": "^2.8.0",
+    "@tiptap/starter-kit": "^2.8.0",
     "antd": "^5.21.4",
     "axios": "^1.7.7",
+    "html-react-parser": "^5.1.18",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0",
+    "tippy.js": "^6.3.7",
     "types": "workspace:*"
   },
   "devDependencies": {
