--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -1,4 +1,5 @@
 PORT=9000
+JWT_SECRET=secret
 
 #POSTGRES
 POSTGRES_HOST=localhost
@@ -6,3 +7,9 @@ POSTGRES_PORT=5432
 POSTGRES_USERNAME=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_DATABASE=expedients
+
+#AWS
+AWS_BUCKET_NAME=
+AWS_BUCKET_REGION=
+AWS_PUBLIC_KEY=
+AWS_SECRECT_KEY=
