refactor environment settings

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
+#[API]
 PORT=9000
 JWT_SECRET=secret
 
@@ -13,3 +14,7 @@ AWS_BUCKET_NAME=
 AWS_BUCKET_REGION=
 AWS_PUBLIC_KEY=
 AWS_SECRECT_KEY=
+
+
+#[CLIENT]
+VITE_API_URL=http://localhost:9000/api
