--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "api",
+  "name": "@expedients/api",
   "version": "0.0.1",
-  "description": "",
-  "author": "",
+  "description": "expedients api",
+  "author": "Christian Carrillo christiancazu@gmail.com",
   "private": true,
-  "license": "UNLICENSED",
+  "license": "ISC",
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
@@ -27,6 +27,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.675.0",
     "@aws-sdk/s3-request-presigner": "^3.675.0",
+    "@expedients/types": "workspace:*",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.0.0",
@@ -34,6 +35,7 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/serve-static": "^4.0.2",
     "@nestjs/typeorm": "^10.0.2",
     "@types/uuid": "^10.0.0",
     "bcrypt": "^5.1.1",
@@ -45,7 +47,6 @@
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.20",
-    "types": "workspace:*",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
@@ -72,7 +73,7 @@
     "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.1.3"
+    "typescript": "^5.3.3"
   },
   "jest": {
     "moduleFileExtensions": [
@@ -89,6 +90,14 @@
       "**/*.(t|j)s"
     ],
     "coverageDirectory": "../coverage",
-    "testEnvironment": "node"
+    "testEnvironment": "node",
+    "keywords": [
+      "pnpm",
+      "monorepo",
+      "typescript",
+      "nest.js",
+      "aws",
+      "s3"
+    ]
   }
 }
