--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -1,7 +1,10 @@
 {
-  "name": "client",
+  "name": "@expedients/client",
+  "version": "0.0.1",
+  "description": "expedients client",
+  "author": "Christian Carrillo christiancazu@gmail.com",
   "private": true,
-  "version": "0.0.0",
+  "license": "ISC",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -11,6 +14,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.5.1",
+    "@expedients/types": "workspace:*",
     "@tanstack/react-query": "^5.59.13",
     "@tiptap/extension-mention": "^2.8.0",
     "@tiptap/react": "^2.8.0",
@@ -21,8 +25,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0",
-    "tippy.js": "^6.3.7",
-    "types": "workspace:*"
+    "tippy.js": "^6.3.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.12.0",
@@ -40,5 +43,12 @@
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.7.0",
     "vite": "^5.4.8"
-  }
+  },
+  "keywords": [
+    "pnpm",
+    "monorepo",
+    "typescript",
+    "react",
+    "ant design"
+  ]
 }
