--- a/packages/types/tsconfig.json
+++ b/packages/types/tsconfig.json
@@ -1,13 +1,10 @@
 {
   "compilerOptions": {
-    "target": "es2016",
-    "module": "commonjs",
+    "target": "ESNext",
+    "module": "CommonJS",
     "rootDir": "./src",
+    "moduleResolution": "Node",
+    "outDir": "./dist",
     "declaration": true,
-    "outDir": "./build",
-    "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
-    "strict": true,
-    "skipLibCheck": true
   }
 }
