deploy: setup docker

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,13 @@
+PORT=9999
+
 #[API]
-PORT=9000
 JWT_SECRET=secret
 
 #POSTGRES
 POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
 POSTGRES_USERNAME=postgres
-POSTGRES_PASSWORD=postgres
+POSTGRES_PASSWORD=password
 POSTGRES_DATABASE=expedients
 
 #AWS
@@ -15,6 +16,5 @@ AWS_BUCKET_REGION=
 AWS_PUBLIC_KEY=
 AWS_SECRECT_KEY=
 
-
 #[CLIENT]
-VITE_API_URL=http://localhost:9000/api
+VITE_API_URL=http://localhost:${PORT}/api
