--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -14,7 +14,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.5.1",
-    "@expedients/types": "workspace:*",
+    "@expedients/shared": "workspace:*",
     "@tanstack/react-query": "^5.59.13",
     "@tiptap/extension-mention": "^2.8.0",
     "@tiptap/react": "^2.8.0",
@@ -28,22 +28,13 @@
     "tippy.js": "^6.3.7"
   },
   "devDependencies": {
-    "@eslint/js": "^9.12.0",
-    "@stylistic/eslint-plugin": "^2.9.0",
-    "@types/eslint__js": "^8.42.3",
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
-    "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
-    "eslint": "^9.11.1",
     "eslint-plugin-react": "^7.37.1",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.12",
-    "globals": "^15.9.0",
-    "sass": "^1.80.4",
-    "typescript": "^5.5.3",
-    "typescript-eslint": "^8.7.0",
-    "vite": "^5.4.8"
+    "sass-embedded": "^1.80.5"
   },
   "keywords": [
     "pnpm",
