--- a/package.json
+++ b/package.json
@@ -8,9 +8,22 @@
   "scripts": {
     "api": "pnpm --filter api",
     "client": "pnpm --filter client",
-    "types": "pnpm --filter types"
+    "shared": "pnpm --filter shared"
   },
   "repository": "https://github.com/christiancazu/expedients",
+  "devDependencies": {
+    "@eslint/eslintrc": "^3.1.0",
+    "@eslint/js": "^9.14.0",
+    "@stylistic/eslint-plugin": "^2.10.1",
+    "@types/eslint__js": "^8.42.3",
+    "@types/node": "^22.8.6",
+    "@typescript-eslint/eslint-plugin": "^8.12.2",
+    "eslint": "^9.14.0",
+    "globals": "^15.11.0",
+    "typescript": "^5.6.3",
+    "typescript-eslint": "^8.12.2",
+    "vite": "^5.4.10"
+  },
   "keywords": [
     "pnpm",
     "monorepo",
