--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -21,7 +21,7 @@ jobs:
   deploy:
     name: Deploy
     runs-on: ubuntu-latest
-    environment: production
+    environment: develop
 
     steps:
       - name: Checkout
