--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -19,8 +19,9 @@
     "@tiptap/extension-mention": "^2.8.0",
     "@tiptap/react": "^2.8.0",
     "@tiptap/starter-kit": "^2.8.0",
-    "antd": "^5.21.4",
+    "antd": "^5.21.6",
     "axios": "^1.7.7",
+    "dayjs": "^1.11.13",
     "html-react-parser": "^5.1.18",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
