--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.5.1",
+    "@cyntler/react-doc-viewer": "^1.17.0",
     "@expedients/shared": "workspace:*",
     "@tanstack/react-query": "^5.59.13",
     "@tiptap/extension-mention": "^2.8.0",
