setup microservice: messenger & refactor

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,20 @@
-PORT=9999
+APP_PORT=9999
+
+APP_DOMAIN=http://localhost
+
+#[API]
+##[expedients]
+JWT_SECRET=secret
+
+##[messenger]
+MESSENGER_PORT=3001
 
 #[API]
 JWT_SECRET=secret
 
 #POSTGRES
-POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
+POSTGRES_HOST=localhost
 POSTGRES_USERNAME=postgres
 POSTGRES_PASSWORD=password
 POSTGRES_DATABASE=expedients
@@ -16,5 +25,10 @@ AWS_BUCKET_REGION=
 AWS_PUBLIC_KEY=
 AWS_SECRECT_KEY=
 
+#MAIL
+MAIL_HOST=
+MAIL_AUTH_USER=
+MAIL_AUTH_PASS=
+
 #[CLIENT]
-VITE_API_URL=http://localhost:${PORT}/api
+VITE_API_URL=http://localhost:${APP_PORT}/api
