--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -1,37 +1,32 @@
 {
   "name": "@expedients/api",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "expedients api",
   "author": "Christian Carrillo christiancazu@gmail.com",
   "private": true,
   "license": "ISC",
   "scripts": {
     "build": "nest build",
-    "start": "nest start",
-    "start:dev": "NODE_ENV=development nest start --watch",
-    "start:debug": "nest start --debug --watch",
-    "start:prod": "NODE_ENV=production node dist/main",
+    "start:dev": "NODE_ENV=development nest start api --watch",
+    "start:prod": "node dist/apps/expedients/main",
     "typeorm": "ts-node ./node_modules/typeorm/cli",
-    "migration:run": "npx typeorm-ts-node-commonjs migration:run -d ./src/config/typeorm.ts",
-    "migration:generate": "npx typeorm-ts-node-commonjs -d ./src/config/typeorm.ts migration:generate src/migrations/$name",
-    "migration:create": "npx typeorm-ts-node-commonjs migration:create ./src/migrations/$name",
-    "migration:revert": "npx typeorm-ts-node-commonjs -d ./src/config/typeorm.ts migration:revert",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "migration:run": "npx typeorm-ts-node-commonjs migration:run -d ./apps/expedients/src/config/typeorm.ts",
+    "migration:generate": "npx typeorm-ts-node-commonjs -d ./apps/expedients/src/config/typeorm.ts migration:generate ./apps/expedients/src/migrations/$name",
+    "migration:create": "npx typeorm-ts-node-commonjs migration:create ./apps/expedients/src/migrations/$name",
+    "migration:revert": "npx typeorm-ts-node-commonjs -d ./apps/expedients/src/config/typeorm.ts migration:revert",
+    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\""
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.675.0",
     "@aws-sdk/s3-request-presigner": "^3.675.0",
     "@expedients/shared": "workspace:*",
+    "@nestjs-modules/mailer": "^2.0.2",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/mapped-types": "*",
+    "@nestjs/microservices": "^10.4.7",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/serve-static": "^4.0.2",
@@ -41,6 +36,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "dotenv": "^16.4.5",
+    "handlebars.adapter": "link:@nestjs-modules/mailer/dist/adapters/handlebars.adapter",
     "mime": "^4.0.4",
     "passport-jwt": "^4.0.1",
     "pg": "^8.13.0",
@@ -75,7 +71,7 @@
       "json",
       "ts"
     ],
-    "rootDir": "src",
+    "rootDir": ".",
     "testRegex": ".*\\.spec\\.ts$",
     "transform": {
       "^.+\\.(t|j)s$": "ts-jest"
@@ -83,15 +79,19 @@
     "collectCoverageFrom": [
       "**/*.(t|j)s"
     ],
-    "coverageDirectory": "../coverage",
+    "coverageDirectory": "./coverage",
     "testEnvironment": "node",
     "keywords": [
       "pnpm",
       "monorepo",
+      "microservices",
       "typescript",
       "nest.js",
       "aws",
       "s3"
+    ],
+    "roots": [
+      "<rootDir>/apps/"
     ]
   }
 }
