--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -2,7 +2,7 @@ name: Deploy to Amazon ECS
 
 on:
   push:
-    branches: ["main"]
+    branches: ["develop"]
 
 env:
   AWS_REGION: ${{ secrets.AWS_REGION }}
