--- a/.env.example
+++ b/.env.example
@@ -2,16 +2,15 @@ APP_PORT=9999
 
 APP_DOMAIN=http://localhost
 
+REDIS_HOST=localhost
+REDIS_PORT=6379
+
 #[API]
 ##[expedients]
 JWT_SECRET=secret
-
+STORAGE_MEDIA_PATH=../..
 ##[messenger]
 MESSENGER_PORT=3001
-
-#[API]
-JWT_SECRET=secret
-STORAGE_MEDIA_PATH=../../media
 
 #POSTGRES
 POSTGRES_PORT=5432
