--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -36,7 +36,8 @@
     "eslint-plugin-react": "^7.37.1",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.12",
-    "sass-embedded": "^1.80.5"
+    "sass-embedded": "^1.80.5",
+    "styled-components": "^6.1.13"
   },
   "keywords": [
     "pnpm",
