--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -47,7 +47,8 @@
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.20",
-    "uuid": "^10.0.0"
+    "uuid": "^10.0.0",
+    "web-push": "^3.6.7"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
@@ -61,6 +62,7 @@
     "@types/node": "^20.3.1",
     "@types/passport-jwt": "^4.0.1",
     "@types/supertest": "^6.0.0",
+    "@types/web-push": "^3.6.4",
     "jest": "^29.5.0",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
