--- a/.env.example
+++ b/.env.example
@@ -32,3 +32,7 @@ MAIL_AUTH_PASS=
 
 #[CLIENT]
 VITE_API_URL=http://localhost:${APP_PORT}/api
+
+SENDER_EMAIL=
+VAPID_PUBLIC_KEY=
+VAPID_PRIVATE_KEY=
