--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -8,7 +8,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build:remote": "export NODE_OPTIONS=\"--max-old-space-size=4096\" build",
+    "build:remote": "export NODE_OPTIONS=\"--max-old-space-size=4096\" && pnpm build",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
