[CLIENT] :package: include tailwind

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,4 +14,8 @@
     "quickfix.biome": "explicit",
     "source.organizeImports.biome": "explicit"
   },
+  "files.associations": {
+    "*.css": "tailwindcss"
+  },
+  "scss.lint.unknownAtRules": "ignore"
 }
