--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -6,9 +6,9 @@
   "private": true,
   "license": "ISC",
   "scripts": {
-    "build": "nest build",
-    "start:dev": "NODE_ENV=development nest start api --watch",
-    "start:prod": "node dist/apps/expedients/main",
+    "build": "rm -rf dist && nest build",
+    "start:dev": "NODE_ENV=development rm -rf dist && nest start api --watch",
+    "start:prod": "NODE_ENV=production node dist/apps/expedients/main",
     "typeorm": "ts-node ./node_modules/typeorm/cli",
     "migration:run": "npx typeorm-ts-node-commonjs migration:run -d ./apps/expedients/src/config/typeorm.ts",
     "migration:generate": "npx typeorm-ts-node-commonjs -d ./apps/expedients/src/config/typeorm.ts migration:generate ./apps/expedients/src/migrations/$name",
