[API] refactor config module

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
+NODE_ENV=development
+
 APP_PORT=9999
 
 APP_DOMAIN=http://localhost
@@ -8,7 +10,7 @@ REDIS_PORT=6379
 #[API]
 ##[expedients]
 JWT_SECRET=secret
-STORAGE_MEDIA_PATH=../..
+MEDIA_FOLDER=media
 ##[messenger]
 MESSENGER_PORT=3001
 
