--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -7,8 +7,8 @@
   "license": "ISC",
   "scripts": {
     "build": "rm -rf dist && nest build",
-    "start:dev": "NODE_ENV=development rm -rf dist && nest start api --watch",
-    "start:prod": "NODE_ENV=production node dist/apps/expedients/main",
+    "start:dev": "rm -rf dist && nest start api --watch",
+    "start:prod": "node dist/apps/expedients/main",
     "typeorm": "ts-node ./node_modules/typeorm/cli",
     "migration:run": "npx typeorm-ts-node-commonjs migration:run -d ./apps/expedients/src/config/typeorm.ts",
     "migration:generate": "npx typeorm-ts-node-commonjs -d ./apps/expedients/src/config/typeorm.ts migration:generate ./apps/expedients/src/migrations/$name",
@@ -40,7 +40,9 @@
     "class-validator": "^0.14.1",
     "dotenv": "^16.4.5",
     "handlebars.adapter": "link:@nestjs-modules/mailer/dist/adapters/handlebars.adapter",
+    "identify-monorepo-root": "^1.0.9",
     "mime": "^4.0.4",
+    "monorepo-root": "^3.3.1",
     "multer": "1.4.5-lts.1",
     "passport-jwt": "^4.0.1",
     "pg": "^8.13.0",
