--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "typescript": "^5.6.3",
     "vite": "^5.4.10"
   },
+  "engines": {
+    "node": ">=22"
+  },
   "keywords": [
     "pnpm",
     "monorepo",
