--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,9 @@
 NODE_ENV=development
+NODE_OPTIONS=--max_old_space_size=4096
 
 APP_PORT=9999
 
-APP_DOMAIN=http://localhost
+APP_DOMAIN=http://localhost:${APP_PORT}
 
 REDIS_HOST=localhost
 REDIS_PORT=6379
@@ -10,7 +11,8 @@ REDIS_PORT=6379
 #[API]
 ##[expedients]
 JWT_SECRET=secret
-MEDIA_FOLDER=media
+MEDIA_FOLDER=/media
+
 ##[messenger]
 MESSENGER_PORT=3001
 
@@ -33,7 +35,8 @@ MAIL_AUTH_USER=
 MAIL_AUTH_PASS=
 
 #[CLIENT]
-VITE_API_URL=http://localhost:${APP_PORT}/api
+VITE_PORT=5000
+VITE_DOMAIN_URL=${APP_DOMAIN}
 
 SENDER_EMAIL=
 VAPID_PUBLIC_KEY=
